@@ -3,7 +3,7 @@
 # The idea to this kind of setup info script was stolen from numerous
 # other packages, such as neon, libxml and gnome.
 #
-# $Id: curl-config.in,v 1.17 2003-01-16 10:58:49 bagder Exp $
+# $Id: curl-config.in,v 1.18 2003-12-08 10:00:21 bagder Exp $
 #
 prefix=@prefix@
 exec_prefix=@exec_prefix@
@@ -89,6 +89,9 @@ while test $# -gt 0; do
         fi
 	if test "@CURL_DISABLE_DICT@" = "1"; then
           echo "DICT-disabled"
+        fi
+	if test "@HAVE_ARES@" = "1"; then
+          echo "AsynchDNS"
         fi
 	;;
 
